# ferrando

./: .gitignore  README.md  pyproject.toml  setup.py
ferrando/apis/ltnf/: baja_data.py
ferrando/fechas/: README.md  __init__.py  feriados.py  generales.py  lista_fechas.py
ferrando/letras/: generales.py  rut.py
ferrando/tiempo/: __init__.py  get_time.py
tiempo/: get_time.py
