[tool.poetry]
name = "ferrando"
version = "0.1.0"
description = "Utilidades con cierto nivel de autorreferencia"
authors = ["F Errandonea"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
holidays = "^0.47"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
