[tool.poetry]
name = "ferrando"
version = "0.1.0"
description = "Utilidades con cierto nivel de autorreferencia"
authors = ["F Errandonea"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
holidays = "^0.47"
requests = "^2.31.0"
sqlalchemy = "^2.0.30"
ipykernel = "^6.29.4"
aiohttp = "^3.9.5"
aiofiles = "^23.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
